--- a/src/patternfly/layouts/Stack/stack.scss
+++ b/src/patternfly/layouts/Stack/stack.scss
@@ -1,5 +1,10 @@
 .pf-l-stack {
   --pf-l-stack--m-gutter--MarginBottom: var(--pf-global--gutter);
+  --pf-l-stack--m-gutter--md--MarginBottom: var(--pf-global--gutter--md);
+
+  @media screen and (max-width: $pf-global--breakpoint--md) {
+    --pf-l-stack--m-gutter--MarginBottom: var(--pf-l-stack--m-gutter--md--MarginBottom);
+  }
 
   display: flex;
   flex-direction: column;
